Fix selected tab appearance on narrower viewports

--- a/app/webpacker/stylesheets/_tabs.scss
+++ b/app/webpacker/stylesheets/_tabs.scss
@@ -1,7 +1,9 @@
 .app-tabs {
-  .govuk-tabs__list-item--selected {
-    box-shadow: inset 0 govuk-spacing(1) govuk-colour("blue");
-    font-weight: bold;
+  @include govuk-media-query($from: tablet) {
+    .govuk-tabs__list-item--selected {
+      box-shadow: inset 0 govuk-spacing(1) $govuk-link-colour;
+      font-weight: bold;
+    }
   }
 }
 
